# alpa

./: Cargo.toml  README.md  default.nix  उदाहरण.अ  प्रस्तावना.अ
src/: core.rs  env.rs  environment.rs  evaluator.rs  grammar.pest  lib.rs  main.rs  ntypes.rs  parser.rs  sankhya.rs  types.rs  प्रस्तावना.अ
