[package]
name = "alpa"
version = "0.1.0"
authors = ["Suvash Thapaliya <suvash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
nom = "6.1.2"
pest = "2.1.0"
pest_derive = "2.1.0"
unicode-segmentation = "1.7.1"